@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rsnapshot 1"
-.TH rsnapshot 1 "2004-07-10" "" ""
+.TH rsnapshot 1 "2004-09-01" "" ""
 .SH "NAME"
 rsnapshot \- remote filesystem snapshot utility
 .SH "SYNOPSIS"
@@ -718,6 +718,15 @@ rsnapshot entry in the FreeBSD ports tree.
 .PP
 Carl Boe (\fBboe@demog.berkeley.edu\fR) Found several subtle bugs and
 provided fixes for them.
+.PP
+Shane Leibling (\fBshane@cryptio.net\fR) fixed a compatibility bug in
+utils/backup_smb_share.sh
+.PP
+Christoph Wegscheider (\fBchristoph.wegscheider@wegi.net\fR) added and
+maintains the Debian rsnapshot package.
+.PP
+Peter Palfrader (\fBweasel@debian.org\fR) enhanced error reporting to
+include command line options.
 .SH "COPYRIGHT"
 .IX Header "COPYRIGHT"
 Copyright (C) 2003\-2004 Nathan Rosenquist
